fix text overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -36,17 +36,26 @@ body {
     justify-content: space-between;
     align-items: center;
     margin: 4% 3.7%;
+    width: 100%;
 }
 
 .activity {
     display: inline-block;
+    text-align: left;
+    width: 80%;
     margin: 0;
     font-weight: 300;
+    overflow-wrap: break-word;
+    background-color: white;
+    padding: 1% 2%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.12);
+
 }
 
 .delete-btn {
     position: relative;
-    right: 0;
+    right: 7.5%;
 }
 
 /* input */
